...
        android:id="@+id/onboardingFragment"
        android:name="com.sugarygary.instory.ui.onboarding.OnboardingFragment"
        android:label="fragment_onboarding"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_onboardingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_top"
            app:popEnterAnim="@anim/slide_in_top"
            app:popExitAnim="@anim/slide_out_bottom"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
...
            app:popEnterAnim="@anim/slide_in_top"
            app:popExitAnim="@anim/slide_out_bottom"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_onboardingFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_top"
            app:popEnterAnim="@anim/slide_in_top"
            app:popExitAnim="@anim/slide_out_bottom"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
...
