<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_maps"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/maps"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_language"
        android:icon="@drawable/baseline_translate_24"
        android:title="@string/language"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/log_out"
        app:showAsAction="ifRoom" />
</menu>